--- a/index.css
+++ b/index.css
@@ -32,8 +32,8 @@ body{font-family: "微软雅黑", "宋体", Arial, sans-serif; font-size: 12px; 
 .l-resizable { display:none; overflow:hidden; border-style:dashed; border-width:1px; opacity:0.5; filter:alpha(opacity=50); position:absolute; top:0; left:0; z-index:15000; background:#f2f1f1; }
 
 .l-dragging-mask {
-    width:100%;height:100%; overflow:hidden; position:absolute;top:0px; left:0px; z-index:11000; display:none;  filter: Alpha
-(opacity=1);background:white; -moz-opacity:.01;opacity:0.01;
+    width:100%;height:100%; overflow:hidden; position:absolute;top:0px; left:0px; z-index:11000; display:none;
+    background:white; -moz-opacity:.01;opacity:0.01;
 }
 /* --------------
   *   icon  *
