--- a/example/demo.css
+++ b/example/demo.css
@@ -1,3 +1,174 @@
+/* -------------
+   * commom *
+* ------------- */
+html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}
+legend{color:#000;}del,ins{text-decoration:none;}
+
+body{font-family: "微软雅黑", "宋体", Arial, sans-serif; font-size: 12px; }
+.l-clear{ clear:both; width:1px; height:1px; overflow:hidden;}
+.l-hidden {display: none;}
+.l-loading
+{
+    position: absolute;z-index: 91000;  top:40%; left:50%; overflow:hidden;
+    background: no-repeat 0px 0px;width:24px; height:24px;
+    display:none;
+}
+/* -------------
+   * 滚动条颜色 *
+* ------------- */
+/*.l-scroll*/
+/*{*/
+/*scrollbar-face-color:#C6D7FF; scrollbar-3dlight-color:#B5CBF7; scrollbar-darkshadow-color:#B5CBF7;*/
+/*scrollbar-base-color:#B5CBF7;*/
+/*scrollbar-shadow-color: #FFF; scrollbar-highlight-color: #FFF;  scrollbar-track-color:#FFF; scrollbar-arrow-color:#4A6184;*/
+/*}*/
+.l-noscroll
+{
+    overflow:hidden;
+}
+/* Draggable */
+.l-draggable{ overflow:hidden; border-style:solid; border-width:1px; opacity:0.5; filter:alpha(opacity=50); position:absolute; top:0; left:0; z-index:14000; background:#f2f1f1; border-color:#aaa;}
+/* Resizable */
+.l-resizable { display:none; overflow:hidden; border-style:dashed; border-width:1px; opacity:0.5; filter:alpha(opacity=50); position:absolute; top:0; left:0; z-index:15000; background:#f2f1f1; }
+
+.l-dragging-mask {
+    width:100%;height:100%; overflow:hidden; position:absolute;top:0px; left:0px; z-index:11000; display:none;
+    background:white; -moz-opacity:.01;opacity:0.01;
+}
+/* --------------
+  *   icon  *
+* ------------ */
+.l-icon-checkbox {background: no-repeat center;}
+
+.l-icon-cross{background: no-repeat center; width:16px; height:16px; line-height:16px;}
+/* -------------
+   * 按钮 *
+* ------------- */
+.l-button {
+    height: 23px;
+    overflow: hidden;
+    width: 60px;
+    line-height: 23px;
+    cursor: pointer;
+    position: relative;  text-align:center;
+    border: solid 1px #A3C0E8;color:#333333;
+    background:#E0EDFF repeat-x center;
+}
+
+.l-button-over{
+    background: #FFBE76 repeat-x center; border-color:#D6A886;
+}
+.l-button-disabled {
+    color:#9D9D9E;border: solid 1px #D3D3D3;
+}
+.l-button-hasicon {
+    padding-left: 20px;
+}
+.l-button-hasicon img {
+    position:absolute; top:4px; left:3px; width:16px; height:16px;
+}
+/*
+    Draggable
+*/
+.l-drag-proxy { border: 1px solid #BDD1EE;position: absolute;z-index: 1001;height:25px; line-height:25px; padding-left:19px; padding-right:4px; background:white;  }
+.l-drag-proxy .l-drop-icon{position: absolute; top:5px; left:4px;width:16px; height:16px; }
+.l-drop-no{background: white  no-repeat 0px -20px; width:16px; height:16px; overflow:hidden;}
+.l-drop-yes{background: white no-repeat 0px 0px;  width:16px; height:16px; overflow:hidden;}
+.l-drop-add{background: white no-repeat -20px 0px;  width:16px; height:16px; overflow:hidden;}
+.l-drag-coldroptip{width:9px; position:absolute; height:44px; z-index:1000;}
+.l-drop-move-up{background:transparent no-repeat -40px 0px; width:9px; height:9px; overflow:hidden;position:absolute; top:0px;}
+.l-drop-move-down{background: transparent no-repeat -60px 0px; width:9px; height:9px; overflow:hidden; position:absolute; bottom:0px;}
+
+.l-drag-nodedroptip,.l-drag-rowdroptip{width:9px; position:absolute; height:1px; background-color:red; z-index:1000; line-height:1px; overflow:hidden;}
+
+
+
+/* filter */
+table.l-filter-group{ background:white; font-size:12px;}
+table.l-filter-group select,table.l-filter-group .valtxt{border:1px solid #d3d3d3;}
+table.l-filter-group .addgroup{}
+table.l-filter-group .addrule{}
+table.l-filter-group .deletegroup{}
+table.l-filter-group .deleterole{ cursor:pointer;}
+table.l-filter-group-alt{ background:#F2F2F2;}
+td.l-filter-groupcell{ padding-left:20px;}
+td.l-filter-column{ padding:2px;}
+td.l-filter-op{padding:2px;}
+td.l-filter-value{padding:2px;}
+tr.l-filter-rowlastcell{ text-align:right;_width:300px; min-width:300px;padding:2px;}
+table.l-filter-group-alt,.l-panel table.l-filter-group-alt{background:#f5f5f5;margin-left:20px; margin-top:4px; padding:5px;border:1px solid #d3d3d3;}
+table.l-filter-group-alt .l-filter-value{ padding-right:6px;}
+td.l-filter-cellgroup{ padding:3px;}
+table.l-filter-group-alt table.l-filter-group{background:white;margin-left:20px; margin-top:4px; padding:5px;border:1px solid #d3d3d3;}
+
+
+.ui-helper-clearfix:before,
+.ui-helper-clearfix:after {
+    content: "";
+    display: table;
+    border-collapse: collapse;
+}
+.ui-helper-clearfix:after {
+    clear: both;
+}
+.ui-helper-clearfix {
+    min-height: 0; /* support: IE7 */
+}
+
+.ui-widget-content {
+    border: 1px solid #aaaaaa;
+    color: #222222;
+}
+.ui-widget-content a {
+    color: #222222;
+}
+.ui-state-default,
+.ui-widget-content .ui-state-default,
+.ui-widget-header .ui-state-default {
+    border: 1px solid #d3d3d3;
+    background: #e6e6e6;
+    font-weight: normal;
+    color: #555555;
+}
+.ui-state-default a,
+.ui-state-default a:link,
+.ui-state-default a:visited {
+    color: #555555;
+    text-decoration: none;
+}
+.ui-state-hover,
+.ui-widget-content .ui-state-hover,
+.ui-widget-header .ui-state-hover,
+.ui-state-focus,
+.ui-widget-content .ui-state-focus,
+.ui-widget-header .ui-state-focus {
+    border: 1px solid #999999;
+    background: #dadada;
+    font-weight: normal;
+    color: #212121;
+}
+.ui-state-hover a,
+.ui-state-hover a:hover,
+.ui-state-hover a:link,
+.ui-state-hover a:visited {
+    color: #212121;
+    text-decoration: none;
+}
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active {
+    border: 1px solid #aaaaaa;
+    background: #ffffff;
+    font-weight: normal;
+    color: #212121;
+}
+.ui-state-active a,
+.ui-state-active a:link,
+.ui-state-active a:visited {
+    color: #212121;
+    text-decoration: none;
+}
+
 
 /* -----------------------
    * 表格 *
@@ -36,7 +207,7 @@
     font-size: 11px;
     height:24px;
     border-bottom:1px solid #99BBE8;
-    background: repeat-x left -1px; position:relative;
+    background:repeat-x left -1px; position:relative;
 }
 .l-panel-header-hasicon{ padding-left:13px;}
 .l-panel-header img{ position:absolute; left:6px; top:5px; width:16px; height:16px; border:0px;}
@@ -44,7 +215,7 @@
 
 .l-panel-body
 {
-    position:relative; overflow:hidden; width:100%;
+    position:relative;overflow:hidden;  width:100%;
 }
 
 .l-panel .l-toolbar {
@@ -79,6 +250,7 @@
 }
 .l-grid-empty .l-grid-body-inner {
     width:100%;
+    overflow: auto;
 }
 .l-grid-empty .l-grid-body {
     overflow:hidden;
@@ -210,7 +382,7 @@
 .l-grid-hd-cell-dropright
 {
     position:absolute;right:0px;top:0px;
-    display: block;background:no-repeat 0px center;width: 16px;height: 24px;
+    display: block;background: no-repeat 0px center;width: 16px;height: 24px;
     z-index: 3;  display:none;
 }
 .l-grid-hd-cell-drop
@@ -219,15 +391,16 @@
 }
 .l-grid-hd-cell-sort
 {
-    overflow:hidden;
+    overflow:hidden; width:15px;display:inline-block;float: right;background-repeat:no-repeat ;
+    background-position: 0 15px;
 }
 .l-grid-hd-cell-sort-asc
 {
-    background: no-repeat center;
+    background-image:url('./img/up.png') ;background-size:12px 12px ;
 }
 .l-grid-hd-cell-sort-desc
 {
-    background: no-repeat center;
+    background-image:url('./img/down.png');background-size:20px 20px ;background-position: -5px 12px;
 }
 .l-grid-hd-cell-btn
 {
@@ -333,18 +506,19 @@
 .l-grid-row-cell-detail .l-grid-row-cell-inner{margin-left:0px; margin-right:0px; width:27px; overflow:hidden;}
 .l-grid-row-cell-detail .l-grid-row-cell-inner span
 {
-    display:block; width:21px; height:21px; background: no-repeat 5px 5px;
+    display:block; width:15px; height:15px; background:url('./img/add.png') no-repeat;
+    background-size:cover ;margin:10px auto;
     cursor:pointer; overflow:hidden;
 }
 .l-grid-row-cell-detail .l-grid-row-cell-inner span.l-open
 {
-    background: no-repeat 5px 5px;
+    background:url('./img/jian.png') no-repeat;background-size:cover ;
 }
 
 .l-grid-row-cell-checkbox .l-grid-row-cell-inner{margin-left:0px; margin-right:0px;}
 .l-grid-row-cell-checkbox span,.l-grid-hd-cell-checkbox .l-grid-hd-cell-inner div
 {
-    display:block; width:13px; height:13px; background: no-repeat;
+    display:block; width:13px; height:13px; background:no-repeat;
     background-position:0px 0px;
     cursor:pointer; overflow:hidden; margin-left:7px; margin-top:3px;
 }
@@ -475,15 +649,16 @@
 */
 .l-grid-tree-space
 {
-    width:18px; height:20px; line-height:20px; overflow:hidden; float:left;
+    width:18px; height:20px; line-height:20px; overflow:hidden;margin:0 auto;float: left;
+    margin-top:11px;
 }
 .l-grid-tree-link-open
 {
-    cursor:pointer;background: no-repeat center;
+    cursor:pointer;background:url('./img/jian.png') no-repeat;background-size: 15px;
 }
 .l-grid-tree-link-close
 {
-    cursor:pointer;background: no-repeat center;
+    cursor:pointer;background:url('./img/add.png') no-repeat;background-size: 15px;
 }
 /*
     frozen grid
@@ -491,7 +666,7 @@
 .l-grid1{  display:none;}
 .l-grid1 .l-grid-body{overflow:hidden;}
 .l-grid1 .l-grid-detailpanel{border-right:1px solid white;}
-.l-frozen .l-grid2{position:absolute; top:0px; left:0px; width:100%; }
+.l-frozen .l-grid2{position:absolute; top:0px; left:0px; width:100%;overflow-x: auto }
 .l-frozen .l-grid2 .l-grid-body{overflow-x:auto;}
 .l-frozen .l-grid1{position:absolute; top:0px; left:0px;display:block;}
 
@@ -502,7 +677,7 @@
 .l-grid-gray .l-grid-header
 {
     border-bottom:1px solid #DDDDDD;
-    background:#E2F0FF url('../images/grid/header2-bg.jpg') repeat-x left bottom;
+    background:#E2F0FF repeat-x left bottom;
 }
 .l-grid-gray .l-grid-hd-cell
 {
@@ -580,6 +755,7 @@
 .l-selected .l-cellselected,.l-cellselected ,.l-grid-row-over .l-cellselected,.l-grid-row-alt .l-cellselected {
     background: rgb(142, 213, 219);
 }
+
 .l-grid-hd-cell-inner{
     color:#fff;
 }
@@ -619,3 +795,6 @@
 /*.l-grid-body1{*/
 /*height: 100%!important;*/
 /*}*/
+.l-panel-bwarp{
+    overflow: hidden;
+}
